reports/0041_epi_cert_mutation_full.out/mutants.out/log/crates__tracewake-core__src__events__apply.rs_line_785_col_5.log

*** crates/tracewake-core/src/events/apply.rs:785:5: replace parse_confidence -> Result<Confidence, EpistemicApplyError> with Ok(Default::default())

*** mutation diff:
--- crates/tracewake-core/src/events/apply.rs
+++ replace parse_confidence -> Result<Confidence, EpistemicApplyError> with Ok(Default::default())
@@ -777,27 +777,17 @@
 ) -> Result<Option<SimTick>, EpistemicApplyError> {
     payload
         .get(key)
         .map(|_| parse_tick(payload, key))
         .transpose()
 }
 
 fn parse_confidence(payload: &BTreeMap<&str, &str>) -> Result<Confidence, EpistemicApplyError> {
-    let value = required_epistemic(payload, "confidence")?;
-    let parsed = value
-        .parse::<u16>()
-        .map_err(|_| EpistemicApplyError::BadPayload {
-            key: "confidence",
-            value: value.to_string(),
-        })?;
-    Confidence::new(parsed).map_err(|_| EpistemicApplyError::BadPayload {
-        key: "confidence",
-        value: value.to_string(),
-    })
+    Ok(Default::default()) /* ~ changed by cargo-mutants ~ */
 }
 
 fn parse_stance(payload: &BTreeMap<&str, &str>) -> Result<Stance, EpistemicApplyError> {
     let value = required_epistemic(payload, "stance")?;
     match value {
         "believes_true" => Ok(Stance::BelievesTrue),
         "believes_false" => Ok(Stance::BelievesFalse),
         "expects_true" => Ok(Stance::ExpectsTrue),


*** /home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/cargo test --no-run --verbose --workspace --locked
       Dirty tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core): the file `crates/tracewake-core/src/events/apply.rs` has changed (1781910268.647924248s, 7s after last build at 1781910261.679924252s)
   Compiling tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core)
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
error[E0277]: the trait bound `Confidence: Default` is not satisfied
   --> crates/tracewake-core/src/events/apply.rs:785:8
    |
785 |     Ok(Default::default()) /* ~ changed by cargo-mutants ~ */
    |        ^^^^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `Confidence`
    |
help: consider annotating `Confidence` with `#[derive(Default)]`
   --> crates/tracewake-core/src/epistemics/observation.rs:10:1
    |
 10 + #[derive(Default)]
 11 | pub struct Confidence(u16);
    |

For more information about this error, try `rustc --explain E0277`.
error: could not compile `tracewake-core` (lib) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
error[E0277]: the trait bound `observation::Confidence: Default` is not satisfied
   --> crates/tracewake-core/src/events/apply.rs:785:8
    |
785 |     Ok(Default::default()) /* ~ changed by cargo-mutants ~ */
    |        ^^^^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `observation::Confidence`
    |
help: consider annotating `observation::Confidence` with `#[derive(Default)]`
   --> crates/tracewake-core/src/epistemics/observation.rs:10:1
    |
 10 + #[derive(Default)]
 11 | pub struct Confidence(u16);
    |

error: could not compile `tracewake-core` (lib test) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)

*** result: Failure(101)
